# job1

./: .gitignore  Dockerfile  ReadMe.md  job1.groovy  pip.conf  pyproject.toml  requirements.txt  script.py  setup.cfg
docker/: ReadMe.md  downgrade_db.sh  up_docker.sh  upgrade_db.sh
docker/docker_composes/: backend_api.yaml  file_manager.yaml  fs_pg.yaml  fsdb.yaml  general.yaml  kafka.yaml  keycloak.yaml  metrics.yaml  model_manager.yaml  proxy.yaml  registry.yaml  ui.yaml
docker/docker_composes/db_docker/: Dockerfile  init.sql
docker/docker_composes/keycloak/: realm-export.json
docker/setup_docker/: docker_setup.sh
docker/setup_docker/fs_backend_api/: Dockerfile
docker/setup_docker/fs_backend_proxy/: Dockerfile
docker/setup_docker/fs_db/: Dockerfile
docker/setup_docker/fs_file_manager/: Dockerfile
docker/setup_docker/fs_general_api/: Dockerfile
docker/setup_docker/fs_metric_manager/: Dockerfile
docker/setup_docker/fs_model_manager/: Dockerfile
docker/setup_docker/fs_registry_api/: Dockerfile
fs_general_api/: config.py  db.py  event_handler.py  permissions.py  run.py  server.py
fs_general_api/dto/: alert_recipient.py  check.py  etl_project.py  hub.py  user.py
fs_general_api/exceptions/: __init__.py  handlers.py
fs_general_api/extra_processes/: __init__.py  mixins.py
fs_general_api/extra_processes/checker/: __init__.py  check.py  etl_project_checker.py
fs_general_api/views/: __init__.py  healthcheck.py
fs_general_api/views/v1/: hub.py  (+2 more)
k8s/: deployment.yaml  service.yaml
tests/: conftest.py  requirements.txt  test_permissions.py
(+49 files in other folders)
