[metadata]
name = fs_general_api
version = 0.7.4

[options]
;python_requires = >=3.7, <3.8
include_package_data = True

install_requires =
    pydantic==1.9
    uvicorn>=0.15
    fastapi==0.78
    fastapi_utils==0.2
    requests==2.27.1
    psycopg2-binary==2.9.3
    python-dotenv==0.20
    devtools==0.9.0
    python-dateutil>=2.8
    gitpython>=3.1.20
    pyyaml==6.0.1
    more_itertools==9.1.0
    aiohttp==3.8.5

    fs_common_lib==0.22.10
    fs_db==0.17.13

packages =
    fs_general_api
    fs_general_api.dto
    fs_general_api.exceptions
    fs_general_api.views


;[options.entry_points]
;console_scripts =
;    fs-db = fs_db.__main__:main
;    fs_db = fs_db.__main__:main
